tests/ui/parser/break_continue_outside_loop.stderr
error: `break` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         break;
   |         ^^^^^^
   |

error: `break` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         continue;
   |         ^^^^^^^^^
   |

error: aborting due to 2 previous errors

